# 26seoulclub-test

./: .env.example  .gitignore  auth.py  build_embeddings.py  chatbot_engine.py  config.json  create_admin_account.py  diagnose_notion.py  embedding_manager.py  failure_analyzer.py  forbidden_words.json  hybrid_search.py  initial_setup.py  morpheme_analyzer.py  prompt_builder.py  pyproject.toml  requirements.txt  run_diagnose.py  seed_app_settings.py  situation_keywords.json  tone_config.py  tone_matrix.py  vercel.json  동아리ON_챗봇_사용자_매뉴얼.md  동아리ON_챗봇_운영자_사용_매뉴얼.md  운영자_운영_셋업_매뉴얼.md  운영자_유지보수_매뉴얼.md  운영자_인수인계_매뉴얼.md
api/: admin.py  chat.py  main.py  startup_state.py  sync_notion.py
api/cron/: sync_notion.py
collectors/: airtable_collector.py  calendar_collector.py  docx_collector.py  excel_collector.py  google_sheet_collector.py  hwp_converted_collector.py  notion_collector.py  pdf_collector.py
models/: document.py
public/: widget.html
public/admin/: app.js  index.html  login.html  styles.css
storage/: action_store.py  admin_store.py  settings_store.py  sqlite_store.py  supabase_store.py
tests/: conftest.py  test_all.py  test_stage2_engine.py  test_stage3_api.py  test_stage4_admin.py
utils/: category_tagger.py  validators.py
