[project]
name = "donghoi-on-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "notion-client>=2.2.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.3",
    "openpyxl>=3.1.2",
    "voyageai>=0.3.0",
    "anthropic>=0.69.0",
    "kiwipiepy>=0.18.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "icalendar>=6.0,<8",
    "recurring-ical-events>=3.0,<4",
]

[tool.vercel]
entrypoint = "api.main:app"
